--- a/AnimationEditor/AnimationEditor.csproj
+++ b/AnimationEditor/AnimationEditor.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{36174CF4-C09E-4E5F-9445-4DFE1072667B}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Exe</OutputType>
     <RootNamespace>AnimationEditor</RootNamespace>
     <AssemblyName>AnimationEditor</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
@@ -35,6 +35,9 @@
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationIcon>MainIcon.ico</ApplicationIcon>
+  </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -136,6 +139,10 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\RSDK1\RSDK1.csproj">
+      <Project>{b636ea0f-22f6-440b-81f7-7ac20bc8ae72}</Project>
+      <Name>RSDK1</Name>
+    </ProjectReference>
     <ProjectReference Include="..\RSDK3\RSDK3.csproj">
       <Project>{3189a2e5-941e-4edb-9b7d-ff4298336e13}</Project>
       <Name>RSDK3</Name>
