--- a/RSDK1/RSDK1.csproj
+++ b/RSDK1/RSDK1.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>RSDK1</RootNamespace>
-    <AssemblyName>RSDK1</AssemblyName>
+    <AssemblyName>RSDKvRS</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
