--- a/RSDK3/RSDK3.csproj
+++ b/RSDK3/RSDK3.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>RSDK3</RootNamespace>
-    <AssemblyName>RSDK3</AssemblyName>
+    <AssemblyName>RSDKv2</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
