--- a/RSDK2/RSDK2.csproj
+++ b/RSDK2/RSDK2.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>RSDK2</RootNamespace>
-    <AssemblyName>RSDK2</AssemblyName>
+    <AssemblyName>RSDKv1</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
