--- a/RSDK5/RSDK5.csproj
+++ b/RSDK5/RSDK5.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>RSDK5</RootNamespace>
-    <AssemblyName>RSDK5</AssemblyName>
+    <AssemblyName>RSDKv5</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
